force-app/main/default/objects/NamedRange__c/NamedRange__c.object-meta.xml
<CustomObject>
    <label>Named Range</label>
    <nameField>
        <label>Named Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Named Ranges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>