force-app/main/default/objects/NamedRange__c/fields/NamedRangeTotalId__c.field-meta.xml
<CustomField>
    <fullName>NamedRangeTotalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Named Range Total</label>
    <referenceTo>NamedRangeTotal__c</referenceTo>
    <relationshipLabel>Named Ranges</relationshipLabel>
    <relationshipName>NamedRanges</relationshipName>
    <type>Lookup</type>
</CustomField>