force-app/main/default/objects/NamedRange__c/fields/ProjectPhaseId__c.field-meta.xml
<CustomField>
    <fullName>ProjectPhaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>ProjectPhase__c</referenceTo>
    <relationshipLabel>Named Ranges</relationshipLabel>
    <relationshipName>NamedRanges</relationshipName>
    <type>Lookup</type>
</CustomField>