force-app/main/default/objects/NamedRange__c/fields/QuoteItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Item</label>
    <referenceTo>QuoteItem__c</referenceTo>
    <relationshipLabel>Named Ranges</relationshipLabel>
    <relationshipName>NamedRanges</relationshipName>
    <type>Lookup</type>
</CustomField>