force-app/main/default/objects/NamedRange__c/fields/QuotePeriodGroupId__c.field-meta.xml
<CustomField>
    <fullName>QuotePeriodGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Period Group</label>
    <referenceTo>QuotePeriodGroup__c</referenceTo>
    <relationshipLabel>Named Ranges</relationshipLabel>
    <relationshipName>NamedRanges</relationshipName>
    <type>Lookup</type>
</CustomField>