force-app/main/default/objects/NamedRange__c/fields/QuotePeriodId__c.field-meta.xml
<CustomField>
    <fullName>QuotePeriodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Period</label>
    <referenceTo>QuotePeriod__c</referenceTo>
    <relationshipLabel>Named Ranges</relationshipLabel>
    <relationshipName>NamedRanges</relationshipName>
    <type>Lookup</type>
</CustomField>