force-app/main/default/objects/NamedRange__c/fields/RangeSpecJSON__c.field-meta.xml
<CustomField>
    <fullName>RangeSpecJSON__c</fullName>
    <label>Range Spec (JSON)</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>