force-app/main/default/objects/NamedRange__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Defined</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Quote Labor</fullName>
            </value>
            <value>
                <fullName>Quote Ancillaries</fullName>
            </value>
            <value>
                <fullName>Quote Item</fullName>
            </value>
            <value>
                <fullName>Quote Period</fullName>
            </value>
            <value>
                <fullName>Quote Period Group</fullName>
            </value>
            <value>
                <fullName>Quote Item Period Group</fullName>
            </value>
            <value>
                <fullName>Quote Section</fullName>
            </value>
            <value>
                <fullName>Project Phase</fullName>
            </value>
            <value>
                <fullName>Quote Item Project Phase</fullName>
            </value>
            <value>
                <fullName>Section Period</fullName>
            </value>
            <value>
                <fullName>Section Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>